--- a/LearningWPF/MainWindow.xaml
+++ b/LearningWPF/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:LearningWPF"
         xmlns:v="clr-namespace:LearningWPF.View"
         mc:Ignorable="d"
-        Title="Cooking Book" Height="900" Width="1150" WindowStartupLocation="CenterScreen">
+        Title="Cooking Book" Height="800" Width="1150" WindowStartupLocation="CenterScreen" 
+        MinWidth="800"
+        MinHeight="800">
     <!--AllowsTransparency="True" WindowStyle="None" Background="Transparent"-->
     <Window.DataContext>
         <local:AppMain/>
