--- a/LearningWPF/View/RecipeView.xaml
+++ b/LearningWPF/View/RecipeView.xaml
@@ -5,93 +5,111 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LearningWPF.View"
              mc:Ignorable="d" 
-             d:DesignHeight="870" d:DesignWidth="894" FontFamily="Arial">
-    
-    <Grid Visibility="{Binding SelectedRecipe, Converter={StaticResource SelectedRecipeConverter}}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="8*"/>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="5*"/>
-        </Grid.RowDefinitions>
-        <TextBox Text="{Binding SelectedRecipe.NameRecipe}" 
-                Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
-                 HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
-                />
-        <Label Content="{Binding SelectedRecipe.NameRecipe}"
-               HorizontalAlignment="Center" VerticalAlignment="Center"
-               FontSize="20" FontFamily="Arial"
-               Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}" FontWeight="Bold"/>
-        <Grid Grid.Row="1" Background="White" >
-            <Image Grid.Row="1"  Source="{Binding SelectedRecipe.ImagePath,
-                        FallbackValue={StaticResource DefaultContactImage},
-                        TargetNullValue={StaticResource DefaultContactImage}}"
-            Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}" 
-                   Width="350" Height="350"      
-                   />
-            <Button Style="{DynamicResource AddImageButton}" Width="400px"
-                    Command="{Binding AddImageCommand}"
+             d:DesignHeight="880" d:DesignWidth="900" FontFamily="Arial">
+    <Border CornerRadius="9" Background="#FFF3F1F1">
+        <Border CornerRadius="8" BorderThickness="0.9" Margin="6" Background="White">
+            <Border.BorderBrush>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFD4D4D4" Offset="0"/>
+                    <GradientStop Color="White" Offset="0.122"/>
+                    <GradientStop Color="#FFDADADA" Offset="0.97"/>
+                    <GradientStop Color="#FFE6E6E6" Offset="0.761"/>
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <Grid Visibility="{Binding SelectedRecipe, Converter={StaticResource SelectedRecipeConverter}}" 
+                  Margin="4" ScrollViewer.VerticalScrollBarVisibility="Visible"
+                  Background="White">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="9*"/>
+                    <RowDefinition Height="5*"/>
+                    <RowDefinition Height="5*"/>
+                </Grid.RowDefinitions>
+                <TextBox Text="{Binding SelectedRecipe.NameRecipe}" 
                     Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
-                    Background="{x:Null}" BorderBrush="Transparent" Cursor="Hand">
-                <Image Grid.Row="1" Source="{Binding SelectedRecipe.ImagePath,
-                        FallbackValue={StaticResource DefaultContactImage},
-                        TargetNullValue={StaticResource DefaultContactImage}}" Width="350" Height="350"/>
-            </Button>
-        </Grid>
-        <Grid Grid.Row="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="0.6*"/>
-                <RowDefinition Height="5*"/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Padding="10 0 0 0" HorizontalAlignment="Left"
-                       Text="Состав" Background="White" FontFamily="Arial" FontSize="16" FontWeight="Bold"/>
-            <TextBlock Grid.Row="1" Text="{Binding SelectedRecipe.СompositionOfTheDish}"
-               FontSize="14" FontFamily="Arial" TextWrapping="Wrap"
-               Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
-            <Border Grid.Row="1">
-                <TextBox Text="{Binding SelectedRecipe.СompositionOfTheDish}"
-                     AcceptsReturn="True" TextWrapping="Wrap"
-                 Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
-                     SpellCheck.IsEnabled="True" AcceptsTab="True" FontSize="14">
-                </TextBox>
-            </Border>
-        </Grid>
-        <Grid Grid.Row="3">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="0.6*"/>
-                <RowDefinition Height="5*"/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" HorizontalAlignment="Left" Padding="10 0 0 0" 
-                       Text="Способ приготовления" Background="White" FontFamily="Arial" FontSize="16" 
-                       FontWeight="Bold"/>
-            <TextBlock Grid.Row="1"  Text="{Binding SelectedRecipe.CookingMethod}"
-               FontSize="14" FontFamily="Arial" TextWrapping="Wrap"
-               Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
-            <TextBox Grid.Row="1"  Text="{Binding SelectedRecipe.CookingMethod}"
-                     AcceptsReturn="True"
-                     TextWrapping="Wrap"
-                 Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
-                      AcceptsTab="True"/>
-        </Grid>
-        <Grid HorizontalAlignment="Right" VerticalAlignment="Top">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="1*"/>
-            </Grid.RowDefinitions>
-            <Button Grid.Row="0" Style="{StaticResource EditButton}" Command="{Binding EditCommand}" 
-                CommandParameter="{Binding SelectedRecipe}"  
-                Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"
-                Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top">
-                <Image Source="/LearningWPF;component/Resourse/EditImage.png" Height="16" Width="18" 
-                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            </Button>
-        </Grid>
-        <Button Style="{StaticResource DeleteButton}" 
-                Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top"
-                Command="{Binding SaveCommand}"
-                Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}">
-            <Image Source="/LearningWPF;component/Resourse/SaveIcon.ico" 
-                   Height="16" Width="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </Button>
-    </Grid>
+                     HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
+                    />
+                <Label Content="{Binding SelectedRecipe.NameRecipe}"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   FontSize="20" FontFamily="Arial"
+                   Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}" FontWeight="Bold"/>
+                <Grid Grid.Row="1" Background="White" >
+                    <Image Grid.Row="1"  Source="{Binding SelectedRecipe.ImagePath,
+                            FallbackValue={StaticResource DefaultContactImage},
+                            TargetNullValue={StaticResource DefaultContactImage}}"
+                Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}" 
+                       Width="340" Height="340" HorizontalAlignment="Center" VerticalAlignment="Center"      
+                       />
+                    <Button Style="{DynamicResource AddImageButton}" Width="400px"
+                        Command="{Binding AddImageCommand}"
+                        Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
+                        Background="{x:Null}" BorderBrush="Transparent" Cursor="Hand"
+                        HorizontalAlignment="Center" VerticalAlignment="Center" >
+                        <Image Grid.Row="1" Source="{Binding SelectedRecipe.ImagePath,
+                            FallbackValue={StaticResource DefaultContactImage},
+                            TargetNullValue={StaticResource DefaultContactImage}}" 
+                           HorizontalAlignment="Center" VerticalAlignment="Center" 
+                           Width="340" Height="340"/>
+                    </Button>
+                </Grid>
+                <Grid Grid.Row="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="0.6*"/>
+                        <RowDefinition Height="5*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Padding="10 0 0 0" HorizontalAlignment="Left"
+                           Text="Состав"  FontFamily="Arial" FontSize="16" FontWeight="Bold"/>
+                    <TextBlock Grid.Row="1" Text="{Binding SelectedRecipe.СompositionOfTheDish}"
+                   FontSize="14" FontFamily="Arial" TextWrapping="Wrap"
+                               ScrollViewer.VerticalScrollBarVisibility="Visible"
+                   Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}" 
+                               MinWidth="878" MinHeight="100" />
+                    <Border Grid.Row="1">
+                        <TextBox Text="{Binding SelectedRecipe.СompositionOfTheDish}"
+                         AcceptsReturn="True" TextWrapping="WrapWithOverflow"
+                     Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
+                         SpellCheck.IsEnabled="True" AcceptsTab="True" FontSize="14"
+                                 MinWidth="878" MinHeight="100">
+                        </TextBox>
+                    </Border>
+                </Grid>
+                <Grid Grid.Row="3">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="0.6*"/>
+                        <RowDefinition Height="5*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" HorizontalAlignment="Left" Padding="10 0 0 0" 
+                           Text="Способ приготовления" FontFamily="Arial" FontSize="16" 
+                           FontWeight="Bold"/>
+                    <TextBlock Grid.Row="1"  Text="{Binding SelectedRecipe.CookingMethod}"
+                   FontSize="14" FontFamily="Arial" TextWrapping="Wrap"
+                   Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}" 
+                               MinWidth="878" MinHeight="100"/>
+                    <TextBox Grid.Row="1"  Text="{Binding SelectedRecipe.CookingMethod}"
+                         AcceptsReturn="True" Margin="2"
+                         TextWrapping="Wrap" MinWidth="878" MinHeight="100"
+                     Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
+                          AcceptsTab="True"/>
+                </Grid>
+                <Grid HorizontalAlignment="Right" VerticalAlignment="Top">
+                    <Button  Style="{StaticResource EditButton}" Command="{Binding EditCommand}" 
+                    CommandParameter="{Binding SelectedRecipe}"  
+                    Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"
+                    Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top">
+                        <Image Source="/LearningWPF;component/Resourse/EditImage.png" Height="16" Width="18" 
+                       HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Button>
+                </Grid>
+                <Button Style="{StaticResource DeleteButton}" 
+                    Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top"
+                    Command="{Binding SaveCommand}"
+                    Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}">
+                    <Image Source="/LearningWPF;component/Resourse/SaveIcon.ico" 
+                       Height="16" Width="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </Button>
+            </Grid>
+            </ScrollViewer>
+        </Border>
+    </Border>
 </UserControl>
