--- a/LearningWPF/View/ItemsListBox.xaml
+++ b/LearningWPF/View/ItemsListBox.xaml
@@ -15,8 +15,7 @@
             <!--<Image Source="/LearningWPF;component/Resourse/ItemList.png"/>-->
             <TextBlock Grid.Column="1" FontSize="14" FontFamily="Arial" 
                        Text="{Binding Path=NameRecipe}" 
-                       VerticalAlignment="Center" HorizontalAlignment="Left"
-                       Padding="5"/>
+                       VerticalAlignment="Center" HorizontalAlignment="Left" Padding="5"/>
         </Grid>
     </Border>
 </UserControl>
