Adding the character ℃ and bind it to the F1 key Slightly shifted windows in BookView.xaml

--- a/LearningWPF/View/BookView.xaml
+++ b/LearningWPF/View/BookView.xaml
@@ -17,7 +17,7 @@
 
         <Grid Grid.Column="0">
             <Border CornerRadius="9" BorderThickness="0." BorderBrush="Black"  
-                    Background="#FFF3F1F1" Margin="0,0,0,4">
+                    Background="#FFE4B289" Margin="4,0,0,4">
                 <Grid>
                     <!--<Grid.RowDefinitions>
                         <RowDefinition/>
@@ -30,7 +30,7 @@
                         <ListView ItemsSource="{Binding Content.RecipeVM.Recipes}"
                         SelectedItem="{Binding Content.RecipeVM.SelectedRecipe}" 
                         ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                       ScrollViewer.VerticalScrollBarVisibility="Hidden" Grid.Column="1" Margin="6">
+                       ScrollViewer.VerticalScrollBarVisibility="Hidden" Grid.Column="1" Margin="6" d:ItemsSource="{d:SampleData ItemCount=5}">
                             <ListView.Resources>
                                 <SolidColorBrush x:Key="Item.MouseOver.Background" Color="#FFF3DEBF"/>
                                 <SolidColorBrush x:Key="Item.MouseOver.Border" Color="#A8FFFFFF"/>
@@ -119,7 +119,7 @@
                 </Grid>
             </Border>
         </Grid>
-        <Grid Grid.Column="1" Margin="10">
+        <Grid Grid.Column="1" Margin="30,10,10,10">
 
             <ContentControl>
                 <ContentControl.Content>
