--- a/LearningWPF/View/CategoryView.xaml
+++ b/LearningWPF/View/CategoryView.xaml
@@ -39,6 +39,13 @@
                             </ToolTip>
                         </MenuItem.ToolTip>
                     </MenuItem>
+                    <!--<MenuItem Header="Добавить символ" Command="{Binding TabVM.SelectedCategory.Content.RecipeVM.InsertCommand}">
+                        <MenuItem.ToolTip>
+                            <ToolTip>
+                                Добавит категорию
+                            </ToolTip>
+                        </MenuItem.ToolTip>
+                    </MenuItem>-->
                     <MenuItem Header="Удалить категорию" Command="{Binding TabVM.RemoveTabCommand}">
                         <MenuItem.ToolTip>
                             <ToolTip>
