--- a/LearningWPF/View/BookView.xaml
+++ b/LearningWPF/View/BookView.xaml
@@ -26,96 +26,27 @@
                     <TextBox Grid.Row="0" Background="#FFDAD8D8" 
                              Text="{Binding Content.RecipeVM.RecipesFilter,
                 UpdateSourceTrigger=PropertyChanged}"/>-->
-                    <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+                    
                         <ListView ItemsSource="{Binding Content.RecipeVM.Recipes}"
                         SelectedItem="{Binding Content.RecipeVM.SelectedRecipe}" 
                         ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                       ScrollViewer.VerticalScrollBarVisibility="Hidden" Grid.Column="1" Margin="6" d:ItemsSource="{d:SampleData ItemCount=5}">
-                            <ListView.Resources>
-                                <SolidColorBrush x:Key="Item.MouseOver.Background" Color="#FFF3DEBF"/>
-                                <SolidColorBrush x:Key="Item.MouseOver.Border" Color="#A8FFFFFF"/>
-                                <SolidColorBrush x:Key="Item.SelectedInactive.Background" Color="#3DDADADA"/>
-                                <SolidColorBrush x:Key="Item.SelectedInactive.Border" Color="#FFDADADA"/>
-                                <SolidColorBrush x:Key="Item.SelectedActive.Background" Color="#eed1a8"/>
-                                <SolidColorBrush x:Key="Item.SelectedActive.Border" Color="White"/>
-                                <Style TargetType="{x:Type ListViewItem}">
-                                    <Setter Property="SnapsToDevicePixels" Value="True"/>
-                                    <Setter Property="Padding" Value="4,1"/>
-                                    <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-                                    <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-                                    <Setter Property="Background" Value="Transparent"/>
-                                    <Setter Property="BorderBrush" Value="Transparent"/>
-                                    <Setter Property="BorderThickness" Value="1"/>
-                                    <Setter Property="Template">
-                                        <Setter.Value>
-                                            <ControlTemplate TargetType="{x:Type ListViewItem}">
-                                                <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
-                                                    <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                                                </Border>
-                                                <ControlTemplate.Triggers>
-                                                    <MultiTrigger>
-                                                        <MultiTrigger.Conditions>
-                                                            <Condition Property="IsMouseOver" Value="True"/>
-                                                        </MultiTrigger.Conditions>
-                                                        <Setter Property="Background" TargetName="Bd" Value="{StaticResource Item.MouseOver.Background}"/>
-                                                        <Setter Property="BorderBrush" TargetName="Bd" Value="{StaticResource Item.MouseOver.Border}"/>
-                                                    </MultiTrigger>
-                                                    <MultiTrigger>
-                                                        <MultiTrigger.Conditions>
-                                                            <Condition Property="Selector.IsSelectionActive" Value="False"/>
-                                                            <Condition Property="IsSelected" Value="True"/>
-                                                        </MultiTrigger.Conditions>
-                                                        <Setter Property="Background" TargetName="Bd" Value="{StaticResource Item.SelectedInactive.Background}"/>
-                                                        <Setter Property="BorderBrush" TargetName="Bd" Value="{StaticResource Item.SelectedInactive.Border}"/>
-                                                    </MultiTrigger>
-                                                    <MultiTrigger>
-                                                        <MultiTrigger.Conditions>
-                                                            <Condition Property="Selector.IsSelectionActive" Value="True"/>
-                                                            <Condition Property="IsSelected" Value="True"/>
-                                                        </MultiTrigger.Conditions>
-                                                        <Setter Property="Background" TargetName="Bd" Value="{StaticResource Item.SelectedActive.Background}"/>
-                                                        <Setter Property="BorderBrush" TargetName="Bd" Value="{StaticResource Item.SelectedActive.Border}"/>
-                                                    </MultiTrigger>
-                                                    <Trigger Property="IsEnabled" Value="False">
-                                                        <Setter Property="TextElement.Foreground" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
-                                                    </Trigger>
-                                                </ControlTemplate.Triggers>
-                                            </ControlTemplate>
-                                        </Setter.Value>
-                                    </Setter>
-                                </Style>
-                            </ListView.Resources>
-                            <ListView.Template>
-                                <ControlTemplate>
-                                    <Border CornerRadius="9" BorderThickness="1" Background="White">
-                                        <Border.BorderBrush>
-                                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                                <GradientStop Color="#FFD4D4D4" Offset="0"/>
-                                                <GradientStop Color="White" Offset="0.452"/>
-                                                <GradientStop Color="#FFDADADA" Offset="0.97"/>
-                                                <GradientStop Color="#FFE6E6E6" Offset="0.761"/>
-                                            </LinearGradientBrush>
-                                        </Border.BorderBrush>
-                                        <ItemsPresenter Margin="4"/>
-                                    </Border>
-                                </ControlTemplate>
-                            </ListView.Template>
+                       ScrollViewer.VerticalScrollBarVisibility="Auto" Grid.Column="1" Margin="6" d:ItemsSource="{d:SampleData ItemCount=5}">
+
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <local:ItemsListBox/>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
-                            <ListView.ContextMenu>
-                                <ContextMenu>
-                                    <MenuItem Header="Добавить рецепт" Command="{Binding Content.RecipeVM.AddCommand}"/>
-                                    <MenuItem Header="Удалить рецепт" Command="{Binding Content.RecipeVM.RemoveCommand}"/>
-                                    <MenuItem Header="Редактировать рецепт" Command="{Binding Content.RecipeVM.EditCommand}"/>
-                                    <MenuItem Header="Сохранить рецепт" Command="{Binding Content.RecipeVM.SaveCommand}"/>
-                                    <MenuItem Header="Сортировать" Command="{Binding Content.RecipeVM.SortCommand}"/>
-                                </ContextMenu>
-                            </ListView.ContextMenu>
-                        </ListView>
-                    </ScrollViewer>
+                        <ListView.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="Добавить рецепт" Command="{Binding Content.RecipeVM.AddCommand}"/>
+                                <MenuItem Header="Удалить рецепт" Command="{Binding Content.RecipeVM.RemoveCommand}"/>
+                                <MenuItem Header="Редактировать рецепт" Command="{Binding Content.RecipeVM.EditCommand}"/>
+                                <MenuItem Header="Сохранить рецепт" Command="{Binding Content.RecipeVM.SaveCommand}"/>
+                                <MenuItem Header="Сортировать" Command="{Binding Content.RecipeVM.SortCommand}"/>
+                            </ContextMenu>
+                        </ListView.ContextMenu>
+                    </ListView>
                 </Grid>
             </Border>
         </Grid>
