Add menuitems copy and paste

--- a/LearningWPF/View/RecipeView.xaml
+++ b/LearningWPF/View/RecipeView.xaml
@@ -94,6 +94,8 @@
                           AcceptsTab="True">
                             <TextBox.ContextMenu>
                                 <ContextMenu>
+                                    <MenuItem Header="Копировать" Command="Copy"/>
+                                    <MenuItem Header="Вставить" Command="Paste"/>
                                     <MenuItem Header="Вставить ℃" Click="MenuItem_Click"/>
                                 </ContextMenu>
                             </TextBox.ContextMenu>
