--- a/LearningWPF/App.xaml
+++ b/LearningWPF/App.xaml
@@ -14,7 +14,7 @@
         <helper:BoolToVisibilityConverter x:Key="IsEditConverter"/>
         <helper:NullToVisibilityConverter x:Key="SelectedRecipeConverter"/>
 
-        <BitmapImage x:Key="DefaultContactImage" UriSource="/DefaultImage3.jpg" />
+        <BitmapImage x:Key="DefaultContactImage" UriSource="/Resourse/DefaultImage3.jpg" />
         
         <Style x:Key="AddButton" TargetType="Button">
             <Setter Property="Template">
