--- a/LearningWPF/View/RecipeView.xaml
+++ b/LearningWPF/View/RecipeView.xaml
@@ -115,7 +115,7 @@
                     Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top"
                     Command="{Binding SaveCommand}"
                     Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}">
-                        <Image Source="/View/SaveIcon.ico" 
+                        <Image Source="/Resourse/SaveIcon.ico" 
                        Height="16" Width="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Button>
                 </Grid>
